--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
 
-.fontTitle {
+.fontNavBar {
   font-family: "Roboto", "Verdana";
   font-weight: 300;
   font-size: 30pt;
@@ -8,7 +8,8 @@
 }
 
 .container {
-  composes: fontTitle;
-  margin: 20px auto;
-  text-align: center;
+  background-color: #b1daae;
+  height: 40px;
+  width: 100%;
+  vertical-align: middle;
 }
