Final css fixes.

--- a/src/components/buttons.scss
+++ b/src/components/buttons.scss
@@ -82,7 +82,7 @@ $info-border: #d6d6d6;
 // TeacherPage
 
 .teacherContainer {
-  padding: 10px;
+  padding: 0 10px 20px 10px;
   text-align: center;
 }
 
