--- a/src/components/buttons.scss
+++ b/src/components/buttons.scss
@@ -1,5 +1,6 @@
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
+
+@import 'fonts';
 
 .fontButton {
   font-family: "Roboto", "Verdana";
