--- a/src/components/title.scss
+++ b/src/components/title.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
+@import 'fonts';
 
 .fontTitle {
   font-family: "Roboto", "Verdana";
