Update css files with consistent names.

--- a/src/components/ButtonGroup.scss
+++ b/src/components/ButtonGroup.scss
@@ -1,16 +1,14 @@
 // Fonts
 
-@import 'fonts';
-
 .fontButton {
-  font-family: "Roboto", "Verdana";
+  font-family: "Verdana";
   font-weight: 300;
   font-size: 15pt;
   color: white;
 }
 
 .fontInfo {
-  font-family: "Roboto", "Verdana";
+  font-family: "Verdana";
   font-weight: 300;
   font-size: 12pt;
   color: black;
