--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -1,7 +1,5 @@
-@import 'fonts';
-
 .fontNavBar {
-  font-family: "Roboto", "Verdana";
+  font-family: "Verdana";
   font-weight: 300;
   font-size: 30pt;
   color: black;
