--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -8,7 +8,7 @@
   height: 60px;
   padding: 5px;
   display: flex;
-  &.path {
+  .path {
     align-self: center;
   }
 }
@@ -16,7 +16,7 @@
 .languageGroup {
   align-self: flex-end;
   padding: 5px;
-  &.language {
+  .flag {
     padding: 0 0 0 5px;
   }
 }
