--- a/src/index-template.ejs
+++ b/src/index-template.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <%= htmlWebpackPlugin.options.appcss %>
 </head>
 <body>
     <div id="app"><%= htmlWebpackPlugin.options.appcontent %></div>
