Fix spelling mistake.

--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -5,7 +5,7 @@
 // The font property variable should be in the form $font-<type|size|...>-<domain>[-subdomain]
 
 $font-type-default: 'Roboto', 'Verdana', sans-serif;
-$font-type-code: 'Roboto Mono', 'Curier New', monospace;
+$font-type-code: 'Roboto Mono', 'Courier New', monospace;
 
 $font-size-default: 15pt;
 $font-size-code: 13pt;
