Delete unused properties.

--- a/src/assets/css/_colors.scss
+++ b/src/assets/css/_colors.scss
@@ -1,14 +1,1 @@
-// Add new color properties here.
-// The color property variable should be in the form $color-<bg|font|icon|border|...>-<domain>[-subdomain]
-
-$color-bg-header: #b1daae;
-$color-bg-footer: #b1daae;
-$color-bg-page: #ffffff;
-$color-bg-info: #f7f7f7
-$color-bg-code: #f7f7f7;
-$color-bg-activity-title: #349946;
-
-$color-font-default: #333333;
-$color-font-header: #3a4739;
-$color-font-footer: #3a4739;
-$color-font-activity-list: #337ab7;
+$color-green-light: #b1daae;
