--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -1,3 +1,5 @@
+@import '../components/fonts';
+
 .content{
   margin-top: 75px;
 }
@@ -16,4 +18,18 @@
   composes: column;
   width: 70%;
   margin-left: 5%;
+}
+
+.fontTitle {
+  font-family: $default-font;
+  font-weight: 400;
+  font-size: 30pt;
+  color: black;
+}
+
+.title {
+  composes: fontTitle;
+  padding: 20px;
+  margin: 0 auto;
+  text-align: center;
 }
