Get rid of the switch. Less is more!

--- a/src/components/ButtonItem.scss
+++ b/src/components/ButtonItem.scss
@@ -1,9 +1,9 @@
 @import '../assets/css/fonts';
 
-$button-green: #46cccc;
-$button-green-hover: #3a9b94;
-$button-blue: #46cc46;
-$button-blue-hover: #359e37;
+$button-blue: #46cccc;
+$button-blue-hover: #3a9b94;
+$button-green: #46cc46;
+$button-green-hover: #359e37;
 
 .fontButton {
   font-family: $font-default;
