--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -20,6 +20,10 @@
   margin-left: 5%;
 }
 
+.center {
+  text-align: center;
+}
+
 .fontTitle {
   font-family: $font-code;
   font-size: 50pt;
@@ -27,17 +31,47 @@
 }
 
 .title {
-  composes: fontTitle;
-  padding: 20px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  composes: fontTitle center;
+  margin: 50px;
 
   .t1 {
     color: #000000;
   }
   .t2 {
     color: #71bf44;
+  }
+}
+
+.link {
+  text-decoration: none !important;
+  color: black;
+  border-bottom: 1px black dotted;
+}
+
+.fontInfoBox {
+  font-family: $font-default;
+  font-size: 15pt;
+  font-weight: 400;
+}
+
+.infoBox {
+  composes: fontInfoBox;
+  padding: 5px;
+  margin: 0 auto;
+  max-width: 700px;
+  background-color: #f7f7f7;
+  border: 1px solid #b2b2b2;
+  border-radius: 10px;
+}
+
+.infoBoxRow {
+  display: flex;
+  flex-direction: row;
+
+  .infoBoxItem {
+    text-align: center;
+  }
+  div {
+    padding: 5px;
   }
 }
