--- a/src/components/Navigation/ToggleButton.scss
+++ b/src/components/Navigation/ToggleButton.scss
@@ -1,20 +1,22 @@
 $color-student: #46cc46;
 $color-teacher: #46cccc;
+$color-search-border: #70aa66;
 
 .button {
   padding: 10px;
   margin: 0 0 0 30px;
   width: 100px;
-  border: 1px solid #000000;
   color: white;
 }
 
 .from {
   composes: button;
   background-color: $color-student;
+  border: 1px solid $color-search-border;
 }
 
 .to {
   composes: button;
   background-color: $color-teacher;
+  border: 1px solid $color-search-border;
 }
