--- a/src/assets/css/_colors.scss
+++ b/src/assets/css/_colors.scss
@@ -1,4 +1,8 @@
-$color-gray: #656565;
+$color-green: #46cc46;
 $color-green-light: #b1daae;
+$color-green-median: #359e37;
 $color-green-dark: #265732;
+$color-blue: #46cccc;
+$color-blue-median: #3a9b94;
+$color-gray: #656565;
 $color-gray-light: #dadada;
