--- a/src/components/Navigation/ToggleButton.scss
+++ b/src/components/Navigation/ToggleButton.scss
@@ -1,6 +1,4 @@
-$color-from: #46cc46;
-$color-to: #46cccc;
-$color-border: #70aa66;
+@import '../../assets/css/colors';
 
 .fontButton {
   font-size: 10pt;
@@ -22,12 +20,12 @@ $color-border: #70aa66;
 
 .from {
   composes: button;
-  background-color: $color-from;
-  border: 1px solid $color-border;
+  background-color: $color-green;
+  border: 1px solid $color-green-median;
 }
 
 .to {
   composes: button;
-  background-color: $color-to;
-  border: 1px solid $color-border;
+  background-color: $color-blue;
+  border: 1px solid $color-blue-median;
 }
