Show external courses on FrontPage

--- a/src/assets/css/_colors.scss
+++ b/src/assets/css/_colors.scss
@@ -1,4 +1,5 @@
 $color-gray: #656565;
+$color-gray-dark: #333333;
 $color-green-light: #b1daae;
 $color-green-dark: #265732;
 $color-gray-light: #dadada;
