--- a/src/components/LessonList/Level.scss
+++ b/src/components/LessonList/Level.scss
@@ -3,7 +3,9 @@
   background-size:20px 20px;
   background-position: 10px;
   display:block;
-  padding-left: 40px !important;
+  min-height: 20px;
+  min-width: 20px;
+  padding-left: 40px;
 }
 .level-1 {
   background-image: url('../../assets/graphics/level/level1.png');
