Remove ugly form border.

--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -12,3 +12,8 @@
     background-color: $color-green-dark;
     color: $color-green-dark;
 }
+
+.navbar-form {
+  border: 0;
+  box-shadow: none;
+}
