--- a/src/components/Navigation/NavBar.scss
+++ b/src/components/Navigation/NavBar.scss
@@ -1,6 +1,6 @@
 @import '../../assets/css/fonts';
 @import '../../assets/css/colors';
-@import '../../assets/css/buttons';
+@import '../../assets/css/nav';
 
 .fontNavBar {
   font-family: $font-default;
