Make nav css global. Add minor css adjustments.

--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -1,3 +1,4 @@
+@import './fonts';
 @import './colors';
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
@@ -16,4 +17,27 @@
 .navbar-form {
   border: 0;
   box-shadow: none;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.navbar-default {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 0;
+  background-color: $color-green-light;
+  color: $color-green-dark;
+  font-family: $font-default;
+  font-weight: 300;
+}
+
+.navbar-collapse {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media (max-width: 767px) {
+  .navbar-form {
+    margin: 0;
+  }
 }
