--- a/src/assets/css/_colors.scss
+++ b/src/assets/css/_colors.scss
@@ -1,5 +1,9 @@
 $color-gray: #656565;
-$color-gray-dark: #333333;
-$color-green-light: #b1daae;
-$color-green-dark: #265732;
 $color-gray-light: #dadada;
+$color-gray-dark: #333333;
+$color-green: #46cc46;
+$color-green-light: #b1daae;
+$color-green-median: #359e37;
+$color-green-dark: #265732;
+$color-blue: #46cccc;
+$color-blue-median: #3a9b94;
