--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -1,2 +1,5 @@
-// TODO (fredaas)
-// Add layout for reuse by components (e.g. displayed code, header, footer, info boxes).
+@import './colors';
+
+.theme-teacher {
+  background-color: $color-blue;
+}
