Implement constraint filter and constraint tags
Add constraintFilter to state tree.
Filter courses and lessons by their constraint tags and checked
constraints in filter.
Show constraint icons on LessonItems.

--- a/src/components/LessonList/LessonItem.scss
+++ b/src/components/LessonList/LessonItem.scss
@@ -9,3 +9,9 @@ a:hover {
     font-weight: bold;
   }
 }
+.constraintImg {
+  max-height: 1.3em;
+  max-width: 1.3em;
+  margin-left: 0.25em;
+  float:right;
+}
