--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -6,12 +6,22 @@
 }
 
 .navbar-default .navbar-toggle {
-    border-color: $color-green-dark;
+  border-color: $color-green-dark;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: $color-green-dark;
-    color: $color-green-dark;
+  background-color: $color-green-dark;
+}
+
+.toggle-teacher {
+  border-color: $color-blue-dark !important;
+  .icon-bar {
+    background-color: $color-blue-dark !important;
+  }
+}
+
+.navbar-teacher {
+  background-color: $color-blue !important;
 }
 
 .navbar-form {
