Use global button classes. Change teacher color theme.

--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -21,7 +21,7 @@
 }
 
 .navbar-teacher {
-  background-color: $color-blue !important;
+  background-color: $color-blue-light !important;
 }
 
 .navbar-form {
