--- a/src/components/ButtonItem.scss
+++ b/src/components/ButtonItem.scss
@@ -19,7 +19,7 @@ $button-green-hover: #359e37;
   height: 100px;
   border: none;
   display: inline-block;
-  transition: all .1s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .green {
