--- a/src/components/Navigation/FlagGroup.scss
+++ b/src/components/Navigation/FlagGroup.scss
@@ -8,7 +8,7 @@
     margin: 0 0 0 5px;
     width: 30px;
     height: 20px;
-    transition: all .075s ease-in-out;
+    transition: all 0.075s ease-in-out;
   }
   .languageItem:hover {
     transform: scale(1.2);
