Make navbar fixed. Remove SVG link tags. Style language button.

--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -22,6 +22,10 @@
   padding-right: 0;
 }
 
+.navbar-right {
+  margin-right: 0;
+}
+
 .navbar-default {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -42,7 +46,31 @@
     margin: 0;
     padding-bottom: 0;
   }
+  .navbar-right {
+    float: left;
+  }
   .form-group {
     max-width: 200px;
   }
+}
+
+.btn-language,
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active:hover,
+.btn-default:active:focus,
+.btn-default:active.focus,
+.btn-default.active:hover,
+.btn-default.active:focus,
+.btn-default.active.focus,
+.open > .btn-default.dropdown-toggle:hover,
+.open > .btn-default.dropdown-toggle:focus,
+.open > .btn-default.dropdown-toggle.focus {
+  color: inherit;
+  background-color: transparent;
+  border-color: inherit;
+}
+
+div {
+  border: 1px solid red !important;
 }
