--- a/src/assets/css/_buttons.scss
+++ b/src/assets/css/_buttons.scss
@@ -2,12 +2,73 @@
 @import './fonts';
 @import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/buttons';
 
+@mixin button-nav($color, $background, $border, $darken) {
+  color: $color;
+  background-color: $background;
+  border-color: $border;
+
+  &:focus,
+  &.focus {
+    color: $color;
+    background-color: darken($background, $darken);
+        border-color: darken($border, $darken);
+  }
+  &:hover {
+    color: $color;
+    background-color: darken($background, $darken);
+        border-color: darken($border, $darken);
+  }
+  &:active,
+  &.active,
+  .open > &.dropdown-toggle {
+    color: $color;
+    background-color: darken($background, $darken);
+        border-color: darken($border, $darken);
+
+    &:hover,
+    &:focus,
+    &.focus {
+      color: $color;
+      background-color: darken($background, $darken);
+          border-color: darken($border, $darken);
+    }
+  }
+  &:active,
+  &.active,
+  .open > &.dropdown-toggle {
+    background-image: none;
+  }
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    &:hover,
+    &:focus,
+    &.focus {
+      background-color: $background;
+          border-color: $border;
+    }
+  }
+
+  .badge {
+    color: $background;
+    background-color: $color;
+  }
+}
+
 .btn-student {
   @include button-variant(#fff, $color-green, $color-green-median);
 }
 
 .btn-teacher {
   @include button-variant(#fff, $color-blue, $color-blue-median);
+}
+
+.btn-student-nav {
+  @include button-nav(#fff, $color-green, $color-green-median, 25%);
+}
+
+.btn-teacher-nav {
+  @include button-nav(#fff, $color-blue, $color-blue-median, 25%);
 }
 
 .btn-xxl {
