--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -30,11 +30,20 @@
   box-shadow: none;
   padding-left: 0;
   padding-right: 0;
+  display: inline-block;
+}
+
+.btn-toggle {
+  display: inline-block;
+}
+
+.navbar-brand {
+  padding: 25px 15px;
 }
 
 .navbar-default {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   border-radius: 0;
   background-color: $color-green-light;
   color: $color-green-dark;
@@ -48,11 +57,18 @@
 }
 
 @media (max-width: 767px) {
+  .navbar-default {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
   .navbar-form {
     margin: 0;
     padding-bottom: 0;
   }
   .form-group {
     max-width: 200px;
+  }
+  .navbar-brand {
+    padding: 15px 15px;
   }
 }
