--- a/src/assets/graphics/SVGLoader.scss
+++ b/src/assets/graphics/SVGLoader.scss
@@ -1,13 +1,13 @@
 .flag {
   margin-left: 5px;
-  transition: all .075s ease-in-out;
+  transition: all 0.075s ease-in-out;
   width: 30px;
   height: 20px;
 }
 
 .icon {
   margin-left: 5px;
-  transition: all .075s ease-in-out;
+  transition: all 0.075s ease-in-out;
   width: 20px;
   height: 20px;
 }
