Add setLanguage. Remove redundant functions and tests. Fix language button.

--- a/src/assets/css/_buttons.scss
+++ b/src/assets/css/_buttons.scss
@@ -10,6 +10,14 @@
   @include button-variant(#fff, $color-blue, $color-blue-median);
 }
 
+.btn-language-student {
+  @include button-variant($color-green-dark, transparent, $color-green-dark);
+}
+
+.btn-language-teacher {
+  @include button-variant($color-blue-dark, transparent, $color-blue-dark);
+}
+
 .btn-xxl {
   @include button-size(0, 0, 1.5em, 1em, 0);
   font-family: $font-default;
