--- a/src/assets/css/_colors.scss
+++ b/src/assets/css/_colors.scss
@@ -7,3 +7,4 @@ $color-green-median: #359e37;
 $color-green-dark: #265732;
 $color-blue: #46cccc;
 $color-blue-median: #3a9b94;
+$color-blue-dark: #215651;
