--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -54,19 +54,19 @@
   }
 }
 
-.btn-language,
-.btn-default:hover,
-.btn-default:focus,
-.btn-default:active:hover,
-.btn-default:active:focus,
-.btn-default:active.focus,
-.btn-default.active:hover,
-.btn-default.active:focus,
-.btn-default.active.focus,
-.open > .btn-default.dropdown-toggle:hover,
-.open > .btn-default.dropdown-toggle:focus,
-.open > .btn-default.dropdown-toggle.focus {
-  color: inherit;
-  background-color: transparent;
-  border-color: inherit;
-}
+// .btn-language,
+// .btn-default:hover,
+// .btn-default:focus,
+// .btn-default:active:hover,
+// .btn-default:active:focus,
+// .btn-default:active.focus,
+// .btn-default.active:hover,
+// .btn-default.active:focus,
+// .btn-default.active.focus,
+// .open > .btn-default.dropdown-toggle:hover,
+// .open > .btn-default.dropdown-toggle:focus,
+// .open > .btn-default.dropdown-toggle.focus {
+//   color: inherit;
+//   background-color: transparent;
+//   border-color: inherit;
+// }
