--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -13,6 +13,7 @@
     text-decoration: none;
     font-weight: bold;
     cursor: pointer;
+    white-space: nowrap;
     .courseLogo {
       padding: 0;
     }
