--- a/src/components/CourseList/CourseItem.scss
+++ b/src/components/CourseList/CourseItem.scss
@@ -7,7 +7,7 @@
   align-content: flex-start;
   flex-direction: column;
   align-items: center;
-  max-width: 150px;
+  max-width: 175px;
   &:hover {
     color: inherit;
     text-decoration: none;
@@ -22,15 +22,21 @@
 .courseLogo {
   max-width: 100%;
   padding: 5px;
-  height: 120px;
+  height: 170px;
   margin-bottom: 15px;
 }
 
+@media screen and (max-width: 500px) {
+  .courseLogo {
+    height: 140px;
+  }
+}
+
 .courseName {
-  font-size: 1.3em;
+  font-size: 1.4em;
 }
 
 .lessonCount {
-  font-size: 0.9em;
+  font-size: 1em;
   color: $color-gray;
 }
