Change color theme when in teacher/student mode. (#108)
* Change background color on navbar when in teacher mode.

* Use single quotes.

* Only show teacher/student buttons when in student mode.

* Change color on filter when in teacher mode.

* Change color on home icon when in teacher mode.

* Change color on hamburger button when in teacher mode.

* Fix NavLink to actually change color when in teacher mode.

* Fix too long lines.

* Use global button classes. Change teacher color theme.

* Access state directly in NavLink.

* Use setModeTeacher instead of changeMode.

* Fix filter collapse button theme.

* Fix too long line.

* Change toggle text.

* Make toggle mode more intuitive.

* Fix yet another eslint complaint.

* Add button group.

* Enable button groups.

* Remove changeMode. Add setModeStudent and setModeTeacher.

* Make it more visible that a button is active.

* Add toggle text.

* Fix eslint error.

* Fix stylelint errors.

--- a/src/assets/css/_colors.scss
+++ b/src/assets/css/_colors.scss
@@ -6,4 +6,6 @@ $color-green-light: #b1daae;
 $color-green-median: #359e37;
 $color-green-dark: #265732;
 $color-blue: #46cccc;
+$color-blue-light: #a3cccb;
 $color-blue-median: #3a9b94;
+$color-blue-dark: #225650;
