--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -6,30 +6,18 @@
   border-bottom: 1px black dotted;
 }
 
-.fontInfoBox {
+.infoBox {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  max-width: 700px;
+  background-color: #f7f7f7 !important;
+  border: 1px solid #b2b2b2;
+  border-radius: 10px;
   font-family: $font-default;
   font-size: 12pt;
   font-weight: 300;
 }
 
-.infoBox {
-  composes: fontInfoBox;
-  padding: 5px;
-  margin: 0 auto;
-  max-width: 700px;
-  background-color: #f7f7f7 !important;
-  border: 1px solid #b2b2b2;
-  border-radius: 10px;
-}
-
-.infoBoxRow {
-  display: flex;
-  flex-direction: row;
-
-  .infoBoxItem {
-    text-align: center;
-  }
-  div {
-    padding: 5px;
-  }
+.center {
+  text-align: center;
 }
